# plasma-workspace

./: CMakeLists.txt
applets/: CMakeLists.txt
applets/batterymonitor/contents/code/: logic.js
applets/batterymonitor/contents/ui/: BatteryIcon.qml  BatteryItem.qml  CompactRepresentation.qml  PopupDialog.qml  batterymonitor.qml
applets/batterymonitor/package/contents/code/: logic.js
applets/batterymonitor/package/contents/ui/: BrightnessItem.qml  PopupDialog.qml  PowerManagementItem.qml
applets/digital-clock/package/contents/config/: main.xml
applets/digital-clock/package/contents/ui/: DigitalClock.qml  Tooltip.qml  configAppearance.qml  configTimeZones.qml  main.qml
applets/digital-clock/plugin/: CMakeLists.txt  timezonedata.h  timezonemodel.cpp  timezonemodel.h
applets/faces-clock/: CMakeLists.txt  Messages.sh
applets/faces-clock/package/: metadata.desktop
applets/faces-clock/package/contents/config/: config.qml  main.xml
applets/faces-clock/package/contents/ui/: Tooltip.qml  configAppearance.qml  configFace.qml  main.qml
applets/faces-clock/package/contents/ui/faces/: BasicClock.qml  ClockBase.qml  DigitalClock.qml
applets/faces-clock/package/contents/ui/faces/basic/: main.qml
applets/faces-clock/package/contents/ui/faces/digital/: main.qml
applets/systemtray/package/contents/ui/: ExpandedRepresentation.qml  PlasmoidPopupsContainer.qml  main.qml
applets/systemtray/package/contents/ui/items/: AbstractItem.qml  PlasmoidItem.qml  StatusNotifierItem.qml
containmentactions/switchdesktop/: CMakeLists.txt  config.ui  desktop.cpp  desktop.h  plasma-containmentactions-switchdesktop.desktop
dataengines/powermanagement/: CMakeLists.txt  powermanagementengine.cpp  powermanagementjob.cpp  powermanagementjob.h
dataengines/time/: CMakeLists.txt  timeengine.cpp  timesource.cpp
klipper/: CMakeLists.txt
ksmserver/: CMakeLists.txt  shutdown.cpp  shutdowndlg.cpp
ksmserver/screenlocker/: CMakeLists.txt  ksldapp.cpp
ksmserver/screenlocker/greeter/: CMakeLists.txt  greeterapp.cpp  greeterapp.h
ksmserver/tests/: CMakeLists.txt
ksplash/ksplashqml/: CMakeLists.txt  SplashApp.cpp  SplashWindow.cpp  SplashWindow.h  main.cpp
libkwayland/: CMakeLists.txt  waylandpanel.cpp  waylandpanel.h  waylandregistry.cpp  waylandregistry.h  waylandshell.cpp  waylandshell.h  waylandsurface.cpp  waylandsurface.h
libkworkspace/: config-libkworkspace.h.cmake
lookandfeel/contents/lockscreen/: LockScreen.qml
runners/: CMakeLists.txt
runners/powerdevil/: CMakeLists.txt  PowerDevilRunner.cpp
shell/: CMakeLists.txt  config-plasma.h.cmake  desktopview.cpp  desktopview.h  main.cpp  panelconfigview.cpp  panelview.cpp  panelview.h  screenpool.cpp  screenpool.h  shellcorona.cpp  shellcorona.h  shellmanager.cpp  shellmanager.h
shell/autotests/: CMakeLists.txt  screenpooltest.cpp
startkde/: CMakeLists.txt  startkde.cmake  startplasmacompositor.cmake
startkde/startkde.d/: 01-x-failsafe.sh  02-darwin.sh  03-full-pathname.sh  04-checking-session.sh  10-check-oxygen-fonts.sh  10-config-dir.sh  11-settings-default.sh  12-locale-preload.sh  13-lc-variables.sh  14-kdeglobals-default.sh  20-kstartupconfig.sh  21-kscreen-scalefactor.sh  22-xcursor-theme.sh  23-fonts-dpi.sh  24-desktop-locked.sh  25-ksplash.sh  30-plasma-workspace-env.sh  31-kde-font-directories.sh  32-ghostscript.sh  40-xdg-data-dirs.cmake  41-kde-dbus-session.sh  50-kde-full-session.sh  51-kwallet-env.sh  52-dbus-session-server.cmake  53-kdeinit-ld-bind.cmake  60-session-manager.sh  61-wait-dr-konqi.sh  90-shutdown.sh
wallpapers/image/: CMakeLists.txt  backgroundlistmodel.cpp  image.cpp  imageplugin.cpp  imageplugin.h  ktxprovider.cpp  ktxprovider.h  ktxreader.cpp  ktxreader.h
